ingress-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-app-rule
  namespace: ashu-project # 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: jaipur.ashutoshh.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ashulb1 
            port:
              number: 80
